🐛 Fix clouds overflowing in title screen

--- a/src/app/components/title-screen/title-screen.component.scss
+++ b/src/app/components/title-screen/title-screen.component.scss
@@ -5,6 +5,7 @@ div.title-screen {
   flex-direction: column;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   background: linear-gradient(#2C90C4, #31CCB0);
 
   h1 {
